# Pokebuy

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
debug/: pokemoncenter-returned.html
doc/: DESIGN.md  PROGRESS.md  TODO.md
migrations/: env.py
migrations/versions/: 20260627_0001_initial.py
src/pokebuy/: __init__.py  cli.py  config.py  debug.py  logging.py  models.py  scraper.py  urls.py
src/pokebuy/collectors/: __init__.py  browser.py  fetcher.py  pokemon_center.py
src/pokebuy/db/: models.py  repository.py  session.py
src/pokebuy/web/: __init__.py  app.py  views.py
src/pokebuy/web/static/: styles.css
src/pokebuy/web/templates/: base.html  dashboard.html  product_detail.html  products.html  settings.html
src/pokebuy/web/templates/partials/: event_table.html  product_table.html
tests/: test_config.py  test_fetcher.py  test_import.py  test_logging.py  test_parser.py  test_repository.py  test_urls.py  test_web.py
tests/fixtures/: product_in_stock.html  product_out_of_stock.html  product_unknown.html
