[project]
name = "pokebuy"
version = "0.1.0"
description = "Pokemon Center product monitoring and notification utility."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "beautifulsoup4>=4.14.0",
    "curl-cffi>=0.15.0",
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "sqlalchemy>=2.0.0",
    "structlog>=25.5.0",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.49.0",
    "websocket-client>=1.9.0",
]

[project.scripts]
pokebuy = "pokebuy.cli:app"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
